--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         </div>
         
         <div class="card-grid">
-            <a class="card">
+            <a href="https://shopee.com.br/Pulseira-de-Silicone-para-Smartwatch-42-44cm-i.345115929.21412151014?sp_atk=bab74054-683a-4cbd-9c6c-6be67e461fc5"
+               target="_blank" 
+               class="card">
                 <div class="card-top">
                     <img src="assets/pulseira.jpg" alt="">
                 </div>
@@ -73,7 +75,9 @@
                     <p class="preco">R$ 4,99</p>
                 </div>
             </a>
-            <a class="card">
+            <a href="https://shopee.com.br/Pel%C3%ADcula-3D-temperado-Xiami-modelo-NOTE-10-MARCA-OLYPS-i.345115929.21525124358?sp_atk=b4d0c9eb-e8cf-4aca-ab4a-3fa41e627c8b"
+               target="_blank"
+               class="card">
                 <div class="card-top">
                     <img src="assets/pelicula.webp" alt="">
                 </div>
@@ -83,7 +87,7 @@
                 </div>
             </a>
             
-            <a href="assets/pelicula-relogio.jpeg"
+            <a href="https://shopee.com.br/Pelicula-Apple-watch-Gel-3D-para-Smartwatch-44-mm-i.345115929.18423878126?sp_atk=1679c75d-bf1c-44d6-a733-2de59a1d4ef4&xptdk=1679c75d-bf1c-44d6-a733-2de59a1d4ef4"
                target="_blank" 
                class="card">
                 <div class="card-top">
@@ -94,7 +98,9 @@
                     <p class="preco">R$ 6,00</p>
                 </div>
             </a>
-            <a class="card">
+            <a href="https://shopee.com.br/Ring-Light-8-polegadas-youtuber-Fotografias-ilumina%C3%A7%C3%A3o-v%C3%ADdeos-i.345115929.21316370898?sp_atk=a414714a-082e-4327-a36c-ec639980a9d8"
+               target="_blank" 
+               class="card">
                 <div class="card-top">
                     <img src="assets/ring.webp" alt="">
                 </div>
@@ -104,7 +110,7 @@
                 </div>
             </a>
         </div>
-        <button class="botao">Ver todos os produtos</button>
+        <a class="botao">Ver todos os produtos</a>
     </div>
 
     <div class="column">
@@ -124,7 +130,7 @@
                 </ul>
             </div>
         </div>
-        <button class="botao">Agendar manutenção</button>
+        <a class="botao">Agendar manutenção</a>
     </div>
 
     <div id="endereco">
